--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "nanoid": "^3.1.25",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-favicon": "^0.0.23",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
